[project]
name = "watchage"
authors = [
    {name = "Rio Fujita", email = "rifujita@microsoft.com"},
]
version = "0.1.0"
license = {file = "LICENSE"}
description = "Add your description here"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.0",
    "psycopg[binary,pool]>=3.2.4",
]

[project.urls]
Homepage = "https://github.com/rioriost/watchage"
Issues = "https://github.com/rioriost/watchage/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
  packages = ["app.py", "templates/index.html"]

[tool.hatch.build.targets.sdist]
include = [
  "app.py",
  "templates/index.html",
]
exclude = [
  "uv.lock",
  "dist/.DS_Store",
]
